# cmake_learning_flag

./: CMakeLists.txt
include/factorial/: factorial.h
include/greeter/: greet.hpp
src/: CMakeLists.txt  README.md  main.cpp
src/factorial/: factorial.c
src/greeter/: greet.cpp
